# qe-lsp

./: .pre-commit-config.yaml  CHANGELOG.md  PLAN.md  README.md  coverage.xml  pyproject.toml
.maintenance/: last-run.md
docs/: DEVELOPMENT.md
examples/: relax.in  scf.in  vc-relax.in
src/qe_lsp/: __init__.py  data.py  docs.py  parser.py  server.py
tests/: __init__.py  conftest.py  test_basic.py  test_data.py  test_parser.py  test_server.py
